[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/levels/options.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/settings_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/settings_button.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=65]
antialiased = false
font_path = "res://fonts/HungryPro.ttf"

[sub_resource type="DynamicFont" id=66]
size = 32
font_data = SubResource( 65 )

[sub_resource type="StyleBoxFlat" id=73]
bg_color = Color( 0.101961, 0.00392157, 0.388235, 1 )

[sub_resource type="StyleBoxFlat" id=71]
bg_color = Color( 0.623529, 0, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=72]
bg_color = Color( 0.772549, 0, 1, 1 )

[sub_resource type="DynamicFontData" id=69]
antialiased = false
font_path = "res://fonts/HungryPro.ttf"

[sub_resource type="DynamicFont" id=70]
size = 32
font_data = SubResource( 69 )

[sub_resource type="DynamicFontData" id=67]
antialiased = false
font_path = "res://fonts/HungryPro.ttf"

[sub_resource type="DynamicFont" id=68]
size = 18
font_data = SubResource( 67 )

[node name="options" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Settings Button" type="TextureButton" parent="."]
anchor_left = 0.979
anchor_top = 0.029
anchor_right = 0.979
anchor_bottom = 0.029
margin_left = -40.0
margin_right = -15.0
margin_bottom = 25.0
mouse_filter = 1
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.835294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -125.0
margin_right = 250.0
margin_bottom = 125.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control/VBoxContainer"]
margin_right = 500.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 66 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "OPTIONS"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 66.0
margin_right = 500.0
margin_bottom = 96.0
custom_constants/separation = 128

[node name="sound" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 168.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 66 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SOUND VOLUME"
align = 1
valign = 1

[node name="slider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 296.0
margin_right = 496.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
custom_styles/grabber_area = SubResource( 73 )
min_value = -20.0
max_value = 0.0
allow_lesser = true
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 132.0
margin_right = 500.0
margin_bottom = 182.0
rect_min_size = Vector2( 500, 50 )
custom_constants/separation = 200
alignment = 1

[node name="Restart" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
focus_mode = 0
custom_styles/hover = SubResource( 71 )
custom_styles/normal = SubResource( 72 )
custom_fonts/font = SubResource( 70 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "RESTART"

[node name="Quit" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
margin_left = 350.0
margin_right = 500.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
focus_mode = 0
custom_styles/hover = SubResource( 71 )
custom_styles/normal = SubResource( 72 )
custom_fonts/font = SubResource( 70 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "QUIT"

[node name="close" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -87.4561
margin_top = -42.8302
margin_right = -19.4561
margin_bottom = -19.8302
custom_fonts/font = SubResource( 68 )
text = "X CLOSE"
flat = true

[connection signal="pressed" from="Settings Button" to="." method="_on_Settings_Button_pressed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/slider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Control/close" to="." method="_on_close_pressed"]
